--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,18 +27,31 @@
   --ifm-footer-padding-horizontal: 1rem;
   --ifm-container-width: 100%;
   --ifm-container-width-xl: 100%;
+
+  --ifm-body-text-color: #1d1e21;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: rgba(0, 51, 173, 1);
+  --ifm-navbar-background-color: rgba(0, 51, 173, 1);
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --ifm-footer-background-color: rgb(29, 30, 33);
+
+  --ifm-navbar-padding-vertical: 1rem;
+  --ifm-navbar-padding-horizontal: 1rem;
+  --ifm-navbar-height: 5rem;
+
+  --ifm-footer-padding-vertical: 3rem;
+  --ifm-footer-padding-horizontal: 1rem;
+  --ifm-container-width: 100%;
+  --ifm-container-width-xl: 100%;
+
+  --ifm-background-color: #ffffff !important;
+
+  --ifm-menu-link-sublist-icon-filter: invert(0) !important;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@300;700&display=swap');
@@ -77,7 +90,7 @@ body {
   font-size: 1rem;
   scroll-behavior: smooth;
   line-height: 1.75;
-  color: #1d1e21;
+  color: var(--ifm-body-text-color);
 
   /* Prevent horizontal scroll */
   max-width: 100vw;
