--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,15 +13,15 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
-  --ifm-navbar-background-color: rgba(0, 51, 173, 1);
+  --ifm-navbar-background-color: #002170;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
-  --ifm-footer-background-color: rgb(29, 30, 33);
+  --ifm-footer-background-color: #1c1e21;
 
-  --ifm-navbar-padding-vertical: 1rem;
-  --ifm-navbar-padding-horizontal: 1rem;
-  --ifm-navbar-height: 5rem;
+  --ifm-navbar-padding-vertical: 0.5rem;
+  --ifm-navbar-padding-horizontal: 2rem;
+  --ifm-navbar-height: 4rem;
 
   --ifm-footer-padding-vertical: 3rem;
   --ifm-footer-padding-horizontal: 1rem;
@@ -40,7 +40,7 @@
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
-  --ifm-footer-background-color: rgb(29, 30, 33);
+  --ifm-footer-background-color: #1c1e21;
 
   --ifm-navbar-padding-vertical: 1rem;
   --ifm-navbar-padding-horizontal: 1rem;
@@ -114,6 +114,26 @@ body {
   justify-self: center !important;
 }
 
+@media (max-width: 996px) {
+  .navbar__item {
+    display: none !important;
+  }
+
+  .dsla-search-field {
+    margin-top: -0.375rem;
+  }
+}
+
+.navbar__toggle > svg {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: -0.1rem;
+}
+
+.navbar__toggle {
+  margin-right: 0.4rem;
+}
+
 .navbar__items--right,
 .navbar__items--right > a {
   color: #fff !important;
@@ -140,64 +160,213 @@ body {
   padding-top: 0.5rem;
 }
 
-.container-fluid {
-  font-family: 'Arial', sans-serif;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 3rem;
-
-  padding: 0 !important;
-  margin: 0 !important;
-}
-
 .footer {
-  margin-top: 1rem;
-}
-
-.footer__bottom {
-  text-align: left;
-  font-size: 0.9rem;
-  flex: 1.1 1 0%;
-  order: -1;
-}
-
-.footer__links * {
-  margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  padding-top: 3.5rem;
 }
 
 .footer__links {
-  flex: 1 1 0%;
+  margin-bottom: 3rem;
 }
 
-.footer__col {
-  font-size: 0.8rem;
-  flex: 1 1 0%;
+@media (max-width: 1024px) {
+  .footer__links {
+    display: grid;
+    margin-bottom: 3.5rem;
+  }
+
+  .footer__col:first-child {
+    grid-column: 1/4;
+    margin-bottom: 3.5rem;
+  }
 }
 
-.footer__col ul {
-  list-style: none;
-  padding: 0;
-  margin: 1rem 0 0;
+@media (max-width: 768px) {
+  .footer-content {
+    margin: 0 -0.5rem;
+  }
+
+  .footer__links {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
-.footer__item > a > svg {
-  display: none;
+.footer__bottom {
+  color: #505660;
 }
 
 .footer--dark {
-  --ifm-footer-background-color: rgb(29, 30, 33);
+  background-color: #1c1e21;
+}
+
+.footer__logo {
+  margin-top: 0;
+}
+
+.footer__link-item {
+  color: #6684cf;
+}
+
+.footer__item {
+  color: #6684cf;
+  font-size: 0.813rem;
+  height: 1.375rem !important;
+  margin: 0;
+  margin-bottom: 0.625rem;
+}
+
+.footer__title {
+  font-size: 0.813rem;
+  line-height: 1.375rem;
+  margin-bottom: 0.625rem;
+}
+
+.footer__copyright {
+  margin-bottom: 3rem;
+}
+
+.footer-bottom-links {
+  display: flex;
+  gap: 1rem;
+  list-style-type: none;
+  padding: 1rem 0;
+  border-top: 1px solid #505660;
+}
+
+.footer-bottom-links > .footer__item {
+  margin-bottom: 0;
+}
+
+.navbar {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+}
+
+.navbar {
+  padding: 0 2rem;
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    padding: 0 1.5rem;
+  }
+}
+
+.navbar__logo {
+  max-width: 10.625rem;
 }
 
 .navbar__link {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #fff !important;
   font-family: 'Chivo', Helvetica, Arial, sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   overflow: hidden;
-  padding: var(--ifm-navbar-item-padding-vertical) 0.57rem !important;
+  padding: var(--ifm-navbar-item-padding-vertical) 0.5rem !important;
+}
+
+.dropdown__link {
+  display: inline-flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 0.25rem;
+  color: #1342b2;
+}
+
+.dropdown--right {
+  padding: 0 !important;
+}
+
+.navbar__items--right > :nth-child(3) {
+  display: flex;
+  /* padding: var(--ifm-navbar-item-padding-vertical) 0.5rem
+    var(--ifm-navbar-item-padding-vertical) 2.5rem !important; */
+
+  justify-content: center;
+}
+
+.navbar__items--right > :nth-child(4) {
+  margin-right: 1rem;
+}
+
+.navbar__items--right > :nth-child(5) {
+  border-left: rgba(255, 255, 255, 0.25) 1px solid;
+  padding-left: 1rem;
+  height: 1.5rem;
+}
+
+@media (max-width: 996px) {
+  .navbar__items--right > :nth-child(3) {
+    display: flex !important;
+    justify-content: center;
+  }
+
+  .navbar__items--right > :nth-child(4) {
+    display: flex !important;
+  }
+
+  .navbar__items--right {
+    margin-right: 3.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar__items--right {
+    margin-right: 3rem;
+  }
+  .navbar__items--right > :nth-child(3) {
+    padding: 0 !important;
+  }
+
+  .navbar__items--right > :nth-child(4) {
+    margin-right: 0.22rem;
+  }
+
+  .navbar__items--right > :nth-child(5) {
+    padding-left: 0.5rem;
+  }
+}
+
+.menu__link--sublist-caret:after {
+  color: #fff !important;
+  background: url('@site/src/components/icons/ChevronDown.svg');
+  transform: rotateZ(0) !important;
+}
+
+.aa-DetachedSearchButtonIcon {
+  background-color: var(--ifm-color-primary) !important;
+  border-radius: 3.125rem;
+}
+
+.dsla-search-field {
+  margin-top: -0.625rem;
+}
+
+.aa-DetachedSearchButton {
+  background-color: var(--ifm-color-primary);
+  border-color: var(--ifm-color-primary) !important;
+}
+
+.aa-SubmitIcon {
+  color: #ffffff;
+}
+
+.navbar__brand {
+  max-width: 13.125rem;
+  margin-right: 0;
+  width: 100%;
+}
+
+.navbar__link {
+  display: inline-flex;
+  justify-content: center;
+  gap: 0.25rem;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.dropdown .navbar__link:after {
+  content: none;
 }
 
 .dropdown__menu {
@@ -213,7 +382,7 @@ body {
 }
 
 .aa-DetachedSearchButton {
-  border-radius: 20px !important;
+  border-radius: 1.25rem !important;
   padding: 0 !important;
   background-color: #fff !important;
 }
@@ -228,31 +397,14 @@ body {
   }
 }
 
-@media (max-width: 1230px) {
+@media (max-width: 1180px) {
   .navbar__link {
-    font-size: 12px;
+    font-size: 0.688rem;
   }
-}
 
-@media (max-width: 1150px) {
-  .container-fluid {
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 2rem;
-  }
-  .footer__links {
-    margin: inherit;
-    padding: inherit;
-  }
-  .footer__col {
-    flex: 1 1 0%;
-    padding: 0.5rem;
-  }
-  .footer {
-    padding: 3rem 1.5rem;
-  }
-  .navbar__link {
-    font-size: 8.9px;
+  .navbar__link > svg {
+    width: 1.125rem;
+    height: 1.125rem;
   }
 }
 
@@ -283,19 +435,6 @@ body {
     justify-content: space-between;
     gap: 2rem;
   }
-  .footer__links {
-    margin: inherit;
-    padding: inherit;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .footer__col {
-    flex: 1 1 0%;
-    padding: 0.5rem;
-  }
-  .footer {
-    padding: 3rem 1.5rem;
-  }
 }
 
 /* Position the "Edit this page" button at the top of the document */
@@ -315,8 +454,8 @@ body {
     font-size: 0.8rem;
   }
   .theme-edit-this-page svg {
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
   }
 }
 
@@ -326,6 +465,6 @@ body {
   font-weight: bold;
 }
 .copyright-license img {
-  height: 18px;
-  margin: -1px 0 -3px 0.4rem;
+  height: 1.125rem;
+  margin: -0.063rem 0 -0.188rem 0.4rem;
 }
