filip(fix): minor fixes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -531,6 +531,16 @@ body {
   color: #fff;
   border-radius: 22.5rem;
   flex-direction: row-reverse;
+  transform: scale(1);
+
+  transition: all 0.2s ease-in-out;
+}
+
+.theme-edit-this-page:hover {
+  color: white;
+  text-decoration: none;
+  transform: scale(1.05);
+  transition: all 0.2s ease-in-out;
 }
 
 @media (max-width: 768px) {
