--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -84,7 +84,9 @@
   --ifm-toc-border-color: #dadde1 !important;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -134,6 +136,9 @@ body {
 
 .navbar__link:hover {
   border-bottom: 2px white solid;
+  padding-bottom: calc(
+    var(--ifm-navbar-item-padding-vertical) - 2px
+  ) !important;
 }
 
 .dropdown--hoverable .navbar__link:hover {
@@ -240,7 +245,7 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .footer-content {
     margin: 0 -0.5rem;
   }
@@ -270,6 +275,10 @@ body {
 }
 
 .footer__link-item {
+  color: #6684cf;
+}
+
+.footer__link-item:hover {
   color: #6684cf;
 }
 
@@ -311,7 +320,7 @@ body {
   padding: 0 2rem;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 767px) {
   .navbar {
     padding: 0 1.5rem;
   }
@@ -377,20 +386,25 @@ body {
   }
 }
 
-@media (max-width: 768px) {
-  .navbar__items--right {
-    margin-right: 3rem;
-  }
+@media (max-width: 767px) {
   .navbar__items--right > :nth-child(3) {
     padding: 0 !important;
   }
 
-  .navbar__items--right > :nth-child(4) {
-    margin-right: 0.22rem;
+  .navbar__items--right {
+    margin-right: 2.1rem;
   }
 
   .navbar__items--right > :nth-child(5) {
     padding-left: 0.5rem;
+  }
+
+  .navbar__items--right {
+    gap: 0.5rem;
+  }
+
+  .navbar__items--right > :nth-child(5) .dsla-search-field {
+    margin-right: -0.375rem;
   }
 }
 
@@ -434,12 +448,10 @@ body {
 
 .dropdown--hoverable .navbar__link svg:first-child {
   transform: rotate(0deg);
-  transition: all 0.2s ease-in-out;
 }
 
 .dropdown--hoverable:hover .navbar__link svg:first-child {
   transform: rotate(180deg);
-  transition: all 0.2s ease-in-out;
 }
 
 .dropdown__menu {
@@ -479,13 +491,6 @@ body {
 }
 
 @media (min-width: 996px) {
-  .menu__list .menu__list {
-    margin-top: 0;
-    padding-top: 1.5rem;
-    border-top: 1px solid #505660;
-    padding-left: 0;
-  }
-
   .theme-doc-sidebar-item-category .menu__list {
     background-color: #ecf1f7;
   }
@@ -543,7 +548,7 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .theme-edit-this-page svg {
     display: none;
   }
@@ -555,7 +560,9 @@ body {
   }
 }
 
-@media (max-width: 768px) {
+/* dropdownNavbarItemMobile_src-theme-NavbarItem-DropdownNavbarItem-styles-module menu__link menu__link--sublist menu__link--sublist-caret */
+
+@media (max-width: 767px) {
   .container {
     padding: 1.5rem 0rem 3.5rem 0.5rem !important;
   }
@@ -606,7 +613,7 @@ body {
   font-size: 0.813rem;
 }
 
-@media (max-width: 997px) {
+@media (max-width: 996px) {
   .toc-heading {
     display: none;
   }
@@ -633,6 +640,16 @@ body {
   flex-direction: row-reverse;
 }
 
+@media (max-width: 996px) {
+  .theme-doc-footer-edit-meta-row {
+    padding: 0 1rem 0.75rem 1rem;
+  }
+
+  .theme-edit-this-page {
+    width: 100%;
+  }
+}
+
 .navbar-sidebar__brand {
   color: white;
   align-items: center;
@@ -644,9 +661,26 @@ body {
 }
 
 .navbar-sidebar__item .menu__link--active {
-  background-color: var(
-    --ifm-sidebar-nav-menu-item-color-background-active
-  ) !important;
+  background-color: var(--ifm-sidebar-nav-menu-item-color-background-active);
+}
+
+.navbar-sidebar__item .menu__link:hover {
+  background-color: var(--ifm-sidebar-nav-menu-item-color-background-active);
+}
+
+.navbar-sidebar__item .theme-doc-sidebar-item-category {
+  background-color: var(--ifm-sidebar-nav-menu-item-color-background-active);
+}
+
+.navbar-sidebar__item .menu__list-item--collapsed {
+  background-color: transparent;
+}
+
+.menu__list .menu__list {
+  margin-top: 0;
+  padding-top: 1.5rem;
+  border-top: 1px solid #505660;
+  padding-left: 0;
 }
 
 .navbar-sidebar__item .menu__caret::before {
@@ -690,6 +724,19 @@ body {
   }
   h1 {
     font-size: 2.8rem;
+  }
+
+  .dropdownNavbarItemMobile_src-theme-NavbarItem-DropdownNavbarItem-styles-module
+    + .menu__list {
+    background-color: #000;
+  }
+
+  .menu__list .menu__link {
+    color: #1342b2 !important;
+  }
+
+  .menu__list .menu__link--sublist {
+    color: #fff !important;
   }
 }
 
